<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_chatlists">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ruoyu.secme.ui.home.HomeFragment"
        android:label="@string/memu_key"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ruoyu.secme.ui.dashboard.DashboardFragment"
        android:label="@string/memu_friend"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ruoyu.secme.ui.notifications.NotificationsFragment"
        android:label="@string/memu_setting"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_chatlists"
        android:name="com.ruoyu.secme.ui.chatlist.ChatListFragment"
        android:label="@string/title_activity_home_page"
        tools:layout="@layout/fragment_chatlist" />
</navigation>