<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#107AFF"
    tools:context=".RegisterPage">

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/linRegisterSetting"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:layout_weight="18"
        android:background="@drawable/radius_shape"
        android:backgroundTint="#F2F2F2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRegisterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txtRegisterTitleStr"
            android:textAlignment="center"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/input_shape"
            android:backgroundTint="#FFFFFF"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/server" />

            <EditText
                android:id="@+id/edtRegisterHost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/edtHostStr"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtRegisterPort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/edtPortStr"
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtServerState"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_weight="30"
                android:text="@string/txtServerStateStr"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imgServerState"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/cicle_red" />

            <TextView
                android:id="@+id/txtStateOfServer"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_weight="30"
                android:text="@string/txtStateOfServerStr"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnConServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="#107AFF"
            android:text="@string/btnConServerStr"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRegisterUsernameStr"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_shape"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/username" />

                <EditText
                    android:id="@+id/edtRegisterUsername"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/edtUsernameStr"
                    android:inputType="textPersonName"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtPasswordStr"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_shape"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/key" />

                <EditText
                    android:id="@+id/edtRegisterPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/edtPasswordStr"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtRepeatPassword"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/input_shape"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/key" />

                <EditText
                    android:id="@+id/edtRepeatPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/edtRepeatPasswordStr"
                    android:inputType="textPassword"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtRegisterResultMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnDoRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#107AFF"
                android:text="@string/btnDoRegisterSte"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>