<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/linlayLoginTable"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginTop="80dp"
        android:layout_weight="18"

        android:background="@drawable/radius_shape"
        android:backgroundTint="#F2F2F2"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="18"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/txtConnectionStr"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_shape"
                android:backgroundTint="#FFFFFF"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/server" />

                    <EditText
                        android:id="@+id/edtHost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:ems="10"
                        android:hint="@string/edtHostStr"
                        android:inputType="none|text"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edtPort"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/edtPortStr"
                        android:inputType="number"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/username" />

                    <EditText
                        android:id="@+id/edtUsername"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="6"
                        android:ems="10"
                        android:hint="@string/edtUsernameStr"
                        android:inputType="textPersonName"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/key" />

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20sp"
                        android:layout_weight="6"
                        android:ems="10"
                        android:hint="@string/edtPasswordStr"
                        android:inputType="textPassword"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtErrorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:textAlignment="center"
                    android:textColor="@color/red" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:text="@string/btnLoginStr"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:text="@string/btnRegisterStr"
                    app:cornerRadius="8dp" />

                <TextView
                    android:id="@+id/txtForgetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtForgotPwdStr"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btnLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:backgroundTint="#34C659"
                    android:text="@string/btnlocal"
                    app:cornerRadius="8dp" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>